adding instructions to readme